--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,7 +1,8 @@
 .navbar {
   width: 100%;
   height: 70px;
-  background: linear-gradient(#071952, #35A29F);
+  background: linear-gradient(#071952, #35a29f);
+
   display: flex;
   align-items: center;
   justify-content: space-between;
