--- a/src/pages/bireyselFirmalar/BireyselFirmalar.css
+++ b/src/pages/bireyselFirmalar/BireyselFirmalar.css
@@ -12,7 +12,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  margin-top: 100px;
-  width: 35%;
+  margin-top: 150px;
+  padding-top: 0px;
+  width: 25%;
   height: 150px;
 }
