--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -19,7 +19,7 @@
 }
 
 .navbar .rightSide a {
-  font-family: "Calibri";
+  font-family: "Arial";
   color: white;
   font-size: 16px;
   font-weight: 100;
@@ -80,7 +80,7 @@
 }
 
 .mobileMenu a {
-  font-family: "Calibri";
+  font-family: "Arial";
   color: white;
   font-size: 16px;
   font-weight: 100;
