--- a/src/pages/bireyselDeneyimler/bireyselDeneyimler.css
+++ b/src/pages/bireyselDeneyimler/bireyselDeneyimler.css
@@ -41,3 +41,8 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   margin-bottom: 20px;
 }
+.bireyselDeneyimler .deneyimPaylas .deneyimFirmaButon {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
