--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,7 +1,7 @@
 .navbar {
   width: 100%;
   height: 70px;
-  background: linear-gradient(#071952, #35a29f);
+  background: linear-gradient(#3b33d5, #1e90ff);
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -9,7 +9,7 @@
 }
 
 .navbar img {
-  width: 200px;
+  width: 300px;
   margin-left: 20px;
 }
 
