--- a/src/pages/kurumsalOnayKutusu/kurumsal.css
+++ b/src/pages/kurumsalOnayKutusu/kurumsal.css
@@ -1,6 +1,5 @@
 .kurumsal {
   border: 1px solid red;
-  background-color: rgb(209, 231, 249);
   width: 100%;
   display: flex;
   flex-wrap: wrap;
@@ -8,10 +7,10 @@
 }
 
 .kurumsal .onayIstegiCard {
-  background-color: rgb(223, 221, 221);
-  border: 2px inset rgb(14, 23, 56); /* override oldu */
+  background-color: #f3f9ff;
+  border: 2px inset #3b33d5; /* override oldu */
   margin: 15px;
-  margin-top: 35px;
+  margin-top: 95px;
   width: 28%;
   width: 350px;
   border-width: 3px 3px 5px 5px;
