--- a/src/pages/bireyselDeneyimler/bireyselDeneyimler.css
+++ b/src/pages/bireyselDeneyimler/bireyselDeneyimler.css
@@ -1,27 +1,9 @@
-/* CSS styling */
-.bireyselDeneyimler {
-  /* Set background image using the imported image path */
-  background-image: url("https://images.pexels.com/photos/3695238/pexels-photo-3695238.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
-  /* Set background size to cover the entire container */
-  background-size: cover;
-  background-image: rot;
-  /* Set background repeat to no-repeat */
-  background-repeat: no-repeat;
-  /* Set background position to center */
-  background-position: center;
-  /* Set the height of the container to make the background visible */
-  height: 100%; /* Set height to your desired value */
-}
-
-.bireyselDeneyimler {
-  background-color: #e6f6fd;
-}
 .swiper {
   width: 100%;
   padding-top: 5px;
   padding-bottom: 5px;
+  color: #9addf9;
 }
-
 .swiper-slide {
   background-position: center;
   background-size: cover;
@@ -35,12 +17,15 @@
   height: 380px;
   border: 5px solid rgb(108, 189, 255);
   border: 5px inset #94dcfa;
+  border: 5px solid #84c0ff;
+  border: 3px solid #180db3;
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: rgb(250, 250, 239);
   background-color: #ffffff;
   background-color: #f2f9fc;
+  background-color: #d4f2ff;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -65,19 +50,12 @@
   color: rgb(118, 118, 118);
 }
 
-.gecmisDeneyimler {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
 .deneyimBaslik {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   flex-direction: row;
 }
-
 .deneyimBaslik h2 {
   color: rgb(25, 86, 136);
   color: linear-gradient(
@@ -94,4 +72,14 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+}
+#tsparticles {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  left: 0;
+  top: 0;
+  z-index: -1;
 }
