--- a/src/pages/kurumsalOnayKutusu/kurumsal.css
+++ b/src/pages/kurumsalOnayKutusu/kurumsal.css
@@ -16,3 +16,9 @@
   border-radius: 4% 95% 6% 95%/95% 4% 92% 5%;
   transform: rotate(-1deg);
 }
+.onayDepartman {
+  font-size: 20px;
+  font-style: italic;
+  font-weight: bold;
+  color: rgb(216, 146, 41);
+}
